Longitudinal v1.2.2. See README.md for details.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 ##################
 *.pyc
 
+# Configuration files #
+#######################
+.project
+.pydevproject
+
 # Cython files #
 ################
 stats.pyd
