--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ addons:
     # - ubuntu-toolchain-r-test
     # - george-edison55-precise-backports
     packages:
-    - python-numpy
-    - python-scipy
-    - python-matplotlib
+    - libblas-dev
+    - liblapack-dev
+    - libatlas-base-dev
     - gfortran
     - libpng-dev
     - libfreetype6
     - python-tk
 install:
-  - pip install coveralls future
+  - pip install coveralls numpy scipy matplotlib future
 cache:
   apt: true
   pip: true
