gcc 4.8 is needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,19 @@
 language: python
 os:
   - linux
-# compiler:
-# - gcc
+compiler:
+  - gcc
 python:
   - "2.7"
   - "3.4"
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    # - george-edison55-precise-backports
+    packages:
+    - gcc-4.8
+    - g++-4.8
 install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
