--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ addons:
     packages:
     - gcc-4.8
     - g++-4.8
+before_install:
+  - export CC=/usr/bin/gcc-4.8
+  - export CXX=/usr/bin/g++-4.8
 install:
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
       wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
@@ -52,6 +55,8 @@ install:
 cache:
   apt: true
   pip: true
+  directories:
+    - $HOME/miniconda
 before_script:
   - python setup_cpp.py
   - export PYTHONPATH='./'
