--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib future
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION coveralls numpy scipy matplotlib future
   - source activate test-environment
 cache:
   apt: true
