--- a/.travis.yml
+++ b/.travis.yml
@@ -32,8 +32,9 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION coveralls numpy scipy matplotlib future
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy scipy matplotlib future
   - source activate test-environment
+  - pip install coveralls
 cache:
   apt: true
   pip: true
@@ -42,3 +43,5 @@ before_script:
   - export PYTHONPATH='./'
 script:
   - coverage run -m pytest -k 'Test and py' unittests/*/*
+after_sucess:
+  - coveralls
