--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,6 @@ before_script:
   - sleep 10
   - export PYTHONPATH='./'
 script:
-  - coverage run -m pytest -k 'test and py' unittests/*/*
+  - coverage run -m pytest unittests/*/test*.py
 after_success:
 - coveralls
