--- a/.travis.yml
+++ b/.travis.yml
@@ -53,9 +53,10 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - pip install coveralls pytest
 before_script:
-  - python setup_cpp.py --compiler=g++-4.8
+  # - python setup_cpp.py --compiler=g++-4.8
   # - sleep 10
-  - export PYTHONPATH='./'
+  # - export PYTHONPATH='./'
+  - python setup.py compile install
 script:
   - coverage run -m pytest -v unittests/*/test*.py
 after_success:
@@ -64,5 +65,3 @@ after_success:
 branches:
   only:
   - master
-  - clean-up
-  
