Fixed broken coverage report

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,18 @@
 [run]
+branch = True
+
 # a list of packages or directories, the source to measure during execution.
-source = beams,impedances,input_parameters,llrf,monitors,plots,synchrotron_radiation,trackers
+source = 
+    blond/beam
+    blond/impedances
+    blond/input_parameters
+    blond/llrf
+    blond/monitors
+    blond/plots
+    blond/synchrotron_radiation
+    blond/trackers
+    blond/utils
+    blond/toolbox
 # a list of file name patterns, the files to include in measurement or reporting.
 # include = 
 
