Fix for issue #144 and other minor fixes
- Since numpy verison 1.16, np.linspace accepts arrays as input. This caused an issue in matched_from_line_density(). The root of this was that profile.cut_options was an array of shape (1,). Cutotions.set_cuts now converts cut_left/cut_right to floats. Also, all other np.linspaces where changed from np.linspace(x,y) to np.linspace(float(x), float(y))
- corrected path to unittests in sanity_chekc.py
Minor fixes:
- .gitignore now includes __BENCHMARKS folder
- Cavity_feedback.py: when debug==True, plot the initial voltage for each 'pre_turn'

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 /__doc/_build/
 /__doc/build/
 /__EXAMPLES/output_files/
+/__BENCHMARKS/debug.log
+/__BENCHMARKS/OTFB.png
+/__BENCHMARKS/2x40_2x80.hd5
+/__BENCHMARKS/fig/
+/__BENCHMARKS/animations/
