--- a/.travis.yml
+++ b/.travis.yml
@@ -52,9 +52,11 @@ install:
       conda create -y -n pyenv python=$TRAVIS_PYTHON_VERSION;
     fi
   - source activate pyenv
-  - conda install -y -q pip numpy scipy matplotlib future h5py
-  - conda list numpy
-  - conda list python
+  # - conda install -y -q pip numpy scipy matplotlib future h5py
+  - conda install -y -q pip
+  - pip install numpy scipy matplotlib future h5py coveralls pytest parameterized
+  # - conda list numpy
+  # - conda list python
   - echo $TRAVIS_PYTHON_VERSION
   - python --version
   - gcc --version
