--- a/.travis.yml
+++ b/.travis.yml
@@ -28,38 +28,43 @@ before_install:
   - export CC=/usr/bin/gcc-4.8
   - export CXX=/usr/bin/g++-4.8
 install:
-  - if test -e $HOME/miniconda/bin ; then
-      echo "Miniconda already installed.";
-    else
-      echo "Installing miniconda.";
-      rm -rf $HOME/miniconda;
-      mkdir -p $HOME/download;
-      if [[ -d $HOME/download/miniconda.sh ]] ; then rm -rf $HOME/download/miniconda.sh ; fi;
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-      bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
-    fi
+  # - if test -e $HOME/miniconda/bin ; then
+  #     echo "Miniconda already installed.";
+  #   else
+  #     echo "Installing miniconda.";
+  #     rm -rf $HOME/miniconda;
+  #     mkdir -p $HOME/download;
+  #     if [[ -d $HOME/download/miniconda.sh ]] ; then rm -rf $HOME/download/miniconda.sh ; fi;
+  #     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
+  #     bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
+  #   fi
   - export PATH="$HOME/miniconda/bin:$PATH"
-  - hash -r
-  - conda config --set always_yes yes --set changeps1 no
-  - conda update -y conda
-  # Useful for debugging any issues with conda
-  # - conda info -a
-  # - conda list
-  - if test -e $HOME/miniconda/envs/pyenv; then
-      echo "pyenv already exists.";
-    else
-      echo "creating pyenv.";
-      conda create -y -n pyenv python=$TRAVIS_PYTHON_VERSION;
-    fi
-  - source activate pyenv
-  # - conda install -y -q pip numpy scipy matplotlib future h5py
-  - conda install -y -q pip
-  - pip install numpy scipy matplotlib future h5py coveralls pytest parameterized
-  # - conda list numpy
-  # - conda list python
   - echo $TRAVIS_PYTHON_VERSION
   - python --version
   - gcc --version
+  # - hash -r
+  # - conda config --set always_yes yes --set changeps1 no
+  # - conda update -y conda
+  - wget https://bootstrap.pypa.io/get-pip.py
+  - python get-pip.py --prefix=/usr/local/
+  - python -m pip install --upgrade pip setuptools wheel
+  - python -m venv pyenv
+  - source pyenv/bin/activate
+  # Useful for debugging any issues with conda
+  # - conda info -a
+  # - conda list
+  # - if test -e $HOME/miniconda/envs/pyenv; then
+  #     echo "pyenv already exists.";
+  #   else
+  #     echo "creating pyenv.";
+  #     conda create -y -n pyenv python=$TRAVIS_PYTHON_VERSION;
+  #   fi
+  # - source activate pyenv
+  # - conda install -y -q pip numpy scipy matplotlib future h5py
+  # - conda install -y -q pip
+  - pip install numpy scipy matplotlib future h5py coveralls pytest parameterized
+  # - conda list numpy
+  # - conda list python
   # Replace dep1 dep2 ... with your dependencies
   - pip install coveralls pytest parameterized
 before_script:
