--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ sudo: false
 cache:
   directories:
     - $HOME/.cache/pip
-    - $HOME/download # Sufficient to add miniconda.sh to TRAVIS cache.
-    - $HOME/miniconda # Add the installation to TRAVIS cache.
+    - $HOME/downloads # Sufficient to add miniconda.sh to TRAVIS cache.
+    # - $HOME/miniconda # Add the installation to TRAVIS cache.
   apt: true
   pip: true
 
@@ -13,65 +13,52 @@ os:
 compiler:
   - gcc
 python:
-  # - "3.5"
   - "3.6"
   - "3.7"
-  # - "3.8"
 addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
     packages:
-    - gcc-4.8
-    - g++-4.8
+    # - gcc-4.8
+    # - g++-4.8
+    - mpich
+    - build-essential
 before_install:
-  - export CC=/usr/bin/gcc-4.8
-  - export CXX=/usr/bin/g++-4.8
-install:
-  # - if test -e $HOME/miniconda/bin ; then
-  #     echo "Miniconda already installed.";
-  #   else
-  #     echo "Installing miniconda.";
-  #     rm -rf $HOME/miniconda;
-  #     mkdir -p $HOME/download;
-  #     if [[ -d $HOME/download/miniconda.sh ]] ; then rm -rf $HOME/download/miniconda.sh ; fi;
-  #     wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/download/miniconda.sh;
-  #     bash $HOME/download/miniconda.sh -b -p $HOME/miniconda;
-  #   fi
-  # - export PATH="$HOME/miniconda/bin:$PATH"
   - echo $TRAVIS_PYTHON_VERSION
   - python --version
   - gcc --version
-  # - hash -r
-  # - conda config --set always_yes yes --set changeps1 no
-  # - conda update -y conda
-  # - wget https://bootstrap.pypa.io/get-pip.py
-  # - python get-pip.py --user
+  - mkdir -p $HOME/downloads
+  - mkdir -p $HOME/install
+  - export LD_LIBRARY_PATH="$HOME/install/lib:$LD_LIBRARY_PATH"
+  # - export CC=/usr/bin/gcc-4.8
+  # - export CXX=/usr/bin/g++-4.8
+install:
+    - if [ -f $HOME/install/lib/libfftw3.so -a -f $HOME/install/include/fftw3.h ]; then
+      echo "FFTW3 already installed.";
+    else
+      echo "Installing FFTW3.";
+      mkdir -p $HOME/downloads;
+      mkdir -p $HOME/install;
+      cd downloads
+      wget http://www.fftw.org/fftw-3.3.8.tar.gz
+      tar -xzvf fftw-3.3.8.tar.gz
+      cd fftw-3.3.8
+      ./configure --prefix=$HOME/install/ --enable-openmp \
+          --enable-sse2 --enable-avx --enable-avx2 \
+          --enable-fma --enable-avx-128-fma \
+          --with-our-malloc --disable-fortran --enable-shared
+      make -j4
+      make install
+      cd
+    fi
   - python -m pip install --upgrade pip setuptools wheel
-  # - python -m venv pyenv
-  # - source pyenv/bin/activate
-  # Useful for debugging any issues with conda
-  # - conda info -a
-  # - conda list
-  # - if test -e $HOME/miniconda/envs/pyenv; then
-  #     echo "pyenv already exists.";
-  #   else
-  #     echo "creating pyenv.";
-  #     conda create -y -n pyenv python=$TRAVIS_PYTHON_VERSION;
-  #   fi
-  # - source activate pyenv
-  # - conda install -y -q pip numpy scipy matplotlib future h5py
-  # - conda install -y -q pip
-  - pip install numpy scipy matplotlib future h5py coveralls pytest parameterized
-  # - conda list numpy
-  # - conda list python
-  # Replace dep1 dep2 ... with your dependencies
-  # - pip install coveralls pytest parameterized
+  - pip install -r requirements.txt
 before_script:
-  # - python setup_cpp.py --compiler=g++-4.8
-  # - sleep 10
-  # - export PYTHONPATH='./'
-  - python setup.py compile install
+  - python blond/compile.py -p --with-fftw-threads \
+      --with-fftw-lib=$HOME/install/lib \
+      --with-fftw-header=$HOME/install/include
+  - export OMP_NUM_THREADS=2
 script:
   - coverage run -m pytest -v unittests/*/test*.py
 after_success:
