--- a/.travis.yml
+++ b/.travis.yml
@@ -33,22 +33,22 @@ before_install:
   # - export CC=/usr/bin/gcc-4.8
   # - export CXX=/usr/bin/g++-4.8
 install:
-  - if [ -f $HOME/install/lib/libfftw3.so -a -f $HOME/install/include/fftw3.h ]; then
+  - if [[ -f $HOME/install/lib/libfftw3.so && -f $HOME/install/include/fftw3.h ]]; then
         echo "FFTW3 already installed.";
     else
         echo "Installing FFTW3.";
         mkdir -p $HOME/downloads;
         mkdir -p $HOME/install;
-        cd downloads
-        wget http://www.fftw.org/fftw-3.3.8.tar.gz
-        tar -xzvf fftw-3.3.8.tar.gz
-        cd fftw-3.3.8
+        cd downloads;
+        wget http://www.fftw.org/fftw-3.3.8.tar.gz;
+        tar -xzvf fftw-3.3.8.tar.gz;
+        cd fftw-3.3.8;
         ./configure --prefix=$HOME/install/ --enable-openmp \
             --enable-sse2 --enable-avx --enable-avx2 \
             --enable-fma --enable-avx-128-fma \
-            --with-our-malloc --disable-fortran --enable-shared
-        make -j4
-        make install
+            --with-our-malloc --disable-fortran --enable-shared;
+        make -j4;
+        make install;
     fi
   - cd
   - python -m pip install --upgrade pip setuptools wheel
