--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ before_build:
   - conda --version 
   - gcc --version
   - python -m pip install --upgrade pip setuptools wheel
-  - pip install requirements.txt
+
   # - conda update -q -y conda
   # - conda info -a
   # - conda create -q -y -n test-environment pip numpy scipy matplotlib future h5py
@@ -43,6 +43,7 @@ before_build:
 
 
 build_script:
+  - pip install -r requirements.txt
   - python setup.py install
   - DIR
   # - set PYTHONPATH=./
