--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,10 @@ install:
         make -j4 > /dev/null;
         make install > /dev/null;
     fi
+  - cd $TRAVIS_BUILD_DIR
   - python -m pip install --upgrade pip setuptools wheel
-before_script:
   - pip install -r requirements.txt
+before_script:
   - python blond/compile.py -p --with-fftw-threads \
       --with-fftw-lib=$HOME/install/lib \
       --with-fftw-header=$HOME/install/include
