--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ install:
         wget http://www.fftw.org/fftw-3.3.8.tar.gz;
         tar -xzvf fftw-3.3.8.tar.gz > /dev/null;
         cd fftw-3.3.8;
-        ./configure --prefix=$HOME/install/ --enable-openmp --enable-sse2 --enable-avx --enable-avx2 --enable-fma --enable-avx-128-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
+        ./configure --prefix=$HOME/install/ --enable-openmp --enable-threads --enable-sse2 --enable-avx --enable-avx2 --enable-fma --enable-avx-128-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
         make -j4 > /dev/null;
         make install > /dev/null;
     fi
