--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,7 +34,7 @@ before_build:
   # - conda --version 
   - gcc --version
   - python -m pip install --upgrade pip setuptools wheel
-  - pip install -r requirements.txt
+  - pip -m pip install -r requirements.txt
 
   # - conda update -q -y conda
   # - conda info -a
