--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ before_build:
   - python --version
   # - conda --version 
   - gcc --version
-  - python -m pip install --upgrade pip setuptools wheel
+  - python -m pip install --upgrade pip setuptools wheel pytest 
   - python -m pip install -r requirements.txt
 
   # - conda update -q -y conda
