not ignoring cpp files when reporting on coveralls

--- a/.coveragerc
+++ b/.coveragerc
@@ -17,7 +17,7 @@ source =
 # include = 
 
 # a list of file name patterns, the files to leave out of measurement or reporting.
-omit = 
-    blond/*/*.cpp
-    blond/*/*.h
+# omit = 
+#     blond/*/*.cpp
+#     blond/*/*.h
     
