--- a/.travis.yml
+++ b/.travis.yml
@@ -58,10 +58,9 @@ before_script:
   - python blond/compile.py -p --with-fftw-threads --with-fftw-lib=$HOME/install/lib --with-fftw-header=$HOME/install/include --flags='--coverage'
   - export OMP_NUM_THREADS=2
 script:
-  - coverage run -m pytest --ignore=unittests/integration/test_validate_mpi.py -v unittests/*/test*.py
-  - coverage run -m pytest -v unittests/integration/test_validate_mpi.py
+  - coverage run -m pytest --ignore=unittests/integration/test_validate_mpi.py -v unittests/*/test*.py && coverage run -m pytest -v unittests/integration/test_validate_mpi.py
 after_success:
-  - test $TRAVIS_PYTHON_VERSION = "3.6" && coveralls --gcov-options='-bca -o ./'
+  - test $TRAVIS_PYTHON_VERSION = "3.6" && coveralls
 
 # branches:
 #   only:
