--- a/.travis.yml
+++ b/.travis.yml
@@ -60,12 +60,12 @@ before_script:
   - python blond/compile.py -p --with-fftw-threads --with-fftw-lib=$HOME/install/lib --with-fftw-header=$HOME/install/include --flags='--coverage'
   - export OMP_NUM_THREADS=2
 script:
-  echo "Running tests"
-  # - coverage run -m pytest -v --ignore=unittests/integration/test_validate_mpi.py unittests/ && coverage run --append -m pytest -v unittests/integration/test_validate_mpi.py
+  # echo "Running tests"
+  - coverage run -m pytest -v --ignore=unittests/integration/test_validate_mpi.py unittests/ && coverage run --append -m pytest -v unittests/integration/test_validate_mpi.py
 after_success:
-  echo "Success"
-  # - coverage report
-  # - test $TRAVIS_PYTHON_VERSION = "3.6" && coveralls
+  # echo "Success"
+  - coverage report
+  - test $TRAVIS_PYTHON_VERSION = "3.6" && coveralls
   # - test $TRAVIS_PYTHON_VERSION != "3.6" && exit 0
   # - if ! [[ "$TRAVIS_PULL_REQUEST" = ^[0-9]+$ ]]; then exit 0 ; fi ;
   # - python -m pip install --upgrade sphinx sphinxcontrib-napoleon sphinx-autopackagesummary
