--- a/.travis.yml
+++ b/.travis.yml
@@ -70,20 +70,22 @@ after_success:
   # - if [[ $TRAVIS_PYTHON_VERSION = "3.6" ]]; then coveralls; else exit 0; fi;
   # - if ! [[ "$TRAVIS_PULL_REQUEST" = ^[0-9]+$ ]]; then exit 0 ; fi ;
   - python -m pip install --upgrade pyqt5 sphinx sphinxcontrib-napoleon sphinx-autopackagesummary
-  - mkdir -p ~/.ssh
+  # - mkdir -p ~/.ssh
   # Needs ssh key generated using "ssh-keygen -f key_fname -t rsa"
   # Env variable is private key encoded using "cat privatekey | base64 -w0" to avoid str manipulations
-  - (echo "$GITHUB_TOKEN_DOCS" | base64 -d) > ~/.ssh/id_rsa
-  - chmod 700 ~/.ssh/id_rsa
-  - eval "$(ssh-agent -s)"
-  - ssh-add ~/.ssh/id_rsa
-  - ssh-keyscan -t rsa 'github.com' >> ~/.ssh/known_hosts 
+  # - (echo "$GITHUB_TOKEN_DOCS" | base64 -d) > ~/.ssh/id_rsa
+  # - chmod 700 ~/.ssh/id_rsa
+  # - eval "$(ssh-agent -s)"
+  # - ssh-add ~/.ssh/id_rsa
+  # - ssh-keyscan -t rsa 'github.com' >> ~/.ssh/known_hosts 
   - git config --global user.name ${USER_LOGIN}
   - git config --global user.email ${USER_EMAIL}
   - cd __doc
   - make html
   - git clone --branch=gh-pages git@github.com:${USER_LOGIN}/BLonD.git BLonD
   - cd BLonD
+  - git remote rm origin
+  - git remote add origin https://"$USER_LOGIN":"$GITHUB_TOKEN"@github.com/"$USER_LOGIN"/BLonD.git
   - cp -r ../_build/html/* .
   - git add -A
   - git status
