--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,8 @@ before_script:
   - export OMP_NUM_THREADS=2
 script:
   # - echo "Running tests"
-  # - coverage run -m pytest -v --ignore=unittests/integration/test_validate_mpi.py unittests/ && coverage run --append -m pytest -v unittests/integration/test_validate_mpi.py
-  - coverage run -m pytest -v unittests/utils/test_blondmath.py
+  - coverage run -m pytest -v --ignore=unittests/integration/test_validate_mpi.py unittests/ && coverage run --append -m pytest -v unittests/integration/test_validate_mpi.py
+  # - coverage run -m pytest -v unittests/utils/test_blondmath.py
 after_success:
   # echo "Success"
   - coverage report
