--- a/.travis.yml
+++ b/.travis.yml
@@ -42,14 +42,14 @@ before_install:
   # - export CC=/usr/bin/gcc-4.8
   # - export CXX=/usr/bin/g++-4.8
 install:
-  - if [[ -f $HOME/install/lib/libfftw3.so && -f $HOME/install/include/fftw3.h ]]; then
+  - if [[ -f $HOME/install/lib/libfftw3.so && -f $HOME/install/include/fftw3.h && -f $HOME/install/lib/libfftw3f.so ]]; then
         echo "FFTW3 already installed.";
     else
         echo "Installing FFTW3.";
         wget http://www.fftw.org/fftw-3.3.8.tar.gz;
         tar -xzvf fftw-3.3.8.tar.gz > /dev/null;
         cd fftw-3.3.8;
-        ./configure --prefix=$HOME/install/ --enable-openmp --enable-threads --enable-sse2 --enable-avx --enable-avx2 --enable-fma --enable-avx-128-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
+        ./configure --prefix=$HOME/install/ --enable-openmp --enable-threads --enable-single --enable-sse2 --enable-avx --enable-avx2 --enable-fma --enable-avx-128-fma --with-our-malloc --disable-fortran --enable-shared > /dev/null;
         make -j4 > /dev/null;
         make install > /dev/null;
     fi
