--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,8 @@
 
 *.pydevproject
 
-.DS_store
 .settings
-.idea/
+.pytest_cache
 
 /__doc/_build/
 /__doc/build/
@@ -19,3 +18,5 @@
 /__BENCHMARKS/2x40_2x80.hd5
 /__BENCHMARKS/fig/
 /__BENCHMARKS/animations/
+*.DS_Store
+.idea
